# obsutils

./: README.md  example.env  pyproject.toml
notebooks/: dev.ipynb  ldt_export_spec.ipynb  ldt_target_list.ipynb  snid_clean_lris.ipynb  swift_photometry.ipynb  swift_photometry_nosub.ipynb  upload_gmos_spectra.ipynb  upload_sdss.ipynb  upload_winter_photometry.ipynb
obsutils/data/: __init__.py  standards.txt
obsutils/utils/: __init__.py  skyportal.py
